// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds admin get moderation reports view gets all moderation reports for a record. 1`] = `
[
  {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 1,
    "reasonType": "com.atproto.report.reasonType#other",
    "reportedByDid": "user(0)",
    "resolvedByActionIds": [
      1,
    ],
    "subject": {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(0)",
      "uri": "record(0)",
    },
  },
]
`;

exports[`pds admin get moderation reports view gets all moderation reports for a repo. 1`] = `
[
  {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 5,
    "reasonType": "com.atproto.report.reasonType#other",
    "reportedByDid": "user(0)",
    "resolvedByActionIds": [
      5,
    ],
    "subject": {
      "$type": "com.atproto.repo.repoRef",
      "did": "user(0)",
    },
  },
  {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 2,
    "reasonType": "com.atproto.report.reasonType#spam",
    "reportedByDid": "user(1)",
    "resolvedByActionIds": [],
    "subject": {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(0)",
      "uri": "record(0)",
    },
  },
  {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 1,
    "reasonType": "com.atproto.report.reasonType#other",
    "reportedByDid": "user(0)",
    "resolvedByActionIds": [
      1,
    ],
    "subject": {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(1)",
      "uri": "record(1)",
    },
  },
]
`;

exports[`pds admin get moderation reports view gets all moderation reports. 1`] = `
[
  {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 6,
    "reasonType": "com.atproto.report.reasonType#spam",
    "reportedByDid": "user(0)",
    "resolvedByActionIds": [],
    "subject": {
      "$type": "com.atproto.repo.repoRef",
      "did": "user(0)",
    },
  },
  {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 5,
    "reasonType": "com.atproto.report.reasonType#other",
    "reportedByDid": "user(1)",
    "resolvedByActionIds": [
      5,
    ],
    "subject": {
      "$type": "com.atproto.repo.repoRef",
      "did": "user(1)",
    },
  },
  {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 4,
    "reasonType": "com.atproto.report.reasonType#spam",
    "reportedByDid": "user(0)",
    "resolvedByActionIds": [],
    "subject": {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(0)",
      "uri": "record(0)",
    },
  },
  {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 3,
    "reasonType": "com.atproto.report.reasonType#other",
    "reportedByDid": "user(1)",
    "resolvedByActionIds": [
      3,
    ],
    "subject": {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(1)",
      "uri": "record(1)",
    },
  },
  {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 2,
    "reasonType": "com.atproto.report.reasonType#spam",
    "reportedByDid": "user(0)",
    "resolvedByActionIds": [],
    "subject": {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(2)",
      "uri": "record(2)",
    },
  },
  {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 1,
    "reasonType": "com.atproto.report.reasonType#other",
    "reportedByDid": "user(1)",
    "resolvedByActionIds": [
      1,
    ],
    "subject": {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(3)",
      "uri": "record(3)",
    },
  },
]
`;

exports[`pds admin get moderation reports view gets all resolved/unresolved moderation reports. 1`] = `
[
  {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 5,
    "reasonType": "com.atproto.report.reasonType#other",
    "reportedByDid": "user(0)",
    "resolvedByActionIds": [
      5,
    ],
    "subject": {
      "$type": "com.atproto.repo.repoRef",
      "did": "user(0)",
    },
  },
  {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 3,
    "reasonType": "com.atproto.report.reasonType#other",
    "reportedByDid": "user(0)",
    "resolvedByActionIds": [
      3,
    ],
    "subject": {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(0)",
      "uri": "record(0)",
    },
  },
  {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 1,
    "reasonType": "com.atproto.report.reasonType#other",
    "reportedByDid": "user(0)",
    "resolvedByActionIds": [
      1,
    ],
    "subject": {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(1)",
      "uri": "record(1)",
    },
  },
]
`;

exports[`pds admin get moderation reports view gets all resolved/unresolved moderation reports. 2`] = `
[
  {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 6,
    "reasonType": "com.atproto.report.reasonType#spam",
    "reportedByDid": "user(0)",
    "resolvedByActionIds": [],
    "subject": {
      "$type": "com.atproto.repo.repoRef",
      "did": "user(0)",
    },
  },
  {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 4,
    "reasonType": "com.atproto.report.reasonType#spam",
    "reportedByDid": "user(0)",
    "resolvedByActionIds": [],
    "subject": {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(0)",
      "uri": "record(0)",
    },
  },
  {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 2,
    "reasonType": "com.atproto.report.reasonType#spam",
    "reportedByDid": "user(0)",
    "resolvedByActionIds": [],
    "subject": {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(1)",
      "uri": "record(1)",
    },
  },
]
`;
